# omix3schemadev

./: .gitignore  .gitmodules  README. md  README.md  Readme.md  pyproject.toml  submit_data.ipynb
dictionary/: copy_to_prod.sh  copy_to_test.sh  input_dd.yaml
dictionary/prod_dict/: _definitions.yaml  _settings.yaml  _terms.yaml  acknowledgement.yaml  aligned_reads_file.yaml  alignment_workflow.yaml  anthropometry.yaml  core_metadata_collection.yaml  demographic.yaml  lipidomics_assay.yaml  medical_history.yaml  metabolomics_assay.yaml  metabolomics_file.yaml  omix3_schema.json  participant_assessment_centre.yaml  phenomics_data_file.yaml  program.yaml  publication.yaml  sample.yaml  subject.yaml  unaligned_reads_file.yaml  wearable.yaml
dictionary/test_dict/: _settings.yaml  cardiovascular.yaml  demographic.yaml  genomics_assay.yaml  lifestyle.yaml  lipidomics_file.yaml  medical_history.yaml  omix3_schema.json  project.yaml  proteomics_assay.yaml  proteomics_file.yaml  publication.yaml  sample.yaml  subject.yaml  (+1 more)
docs/: how_to_use.md  setup.md
jupyter/: schema_dev_framework.ipynb
manual_metadata/: project.json
reference/: HViC_select_variables.csv  HViC_select_variables_v2.csv
schema_out/: aligned_reads_file.yaml  alignment_workflow.yaml  genomics_assay.yaml  lipidomics_assay.yaml  lipidomics_file.yaml  metabolomics_assay.yaml  metabolomics_file.yaml  proteomics_assay.yaml  proteomics_file.yaml  sample.yaml  unaligned_reads_file.yaml
scripts/: copy_to_prod.sh  copy_to_test.sh  generate_schema.sh  update_dict_version.py  update_metadata_indexd_cli.py
(+106 files in other folders)
