[project]
name = "omix3schemadev"
version = "0.1.7"
description = ""
authors = [
    {name = "JoshuaHarris391",email = "harjo391@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "gen3schemadev (==2.3.3)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
