[project]
name = "omix3schemadev"
version = "1.0.0"
description = "Gen3 Data Dictionary for Omix3"
authors = [
    {name = "JoshuaHarris391",email = "harjo391@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.10, <4.0.0"
dependencies = [
    "gen3schemadev (==2.3.3)",
    "pandas >=2.2.3, <3.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.0.1,<8.0.0)"
]
